--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,16 +11,16 @@ const zip = (a: any, b: any) => a.map((k: any, i: any) => [k, b[i]]);
 const words = "I love you so much my beautiful darling girl !".split(" ")
 
 const imgs = [
-	"/IMG_20220326_170758.jpg",
-	"/IMG_20220412_114227.jpg",
-	"/IMG_20220506_175902.jpg",
-	"/IMG_20220528_134100.jpg",
-	"/IMG_20220717_132134.jpg",
-	"/IMG_20230318_233758.jpg",
-	"/IMG_20230320_154208.jpg",
-	"/original_c526cbc3-274e-4468-92f5-bb1ae2f925bb_IMG_20210718_195703~2.jpg",
-	"/original_6ecd1616-0e85-42e6-be19-a27f18268673_IMG_20220716_173404.jpg",
-	"/IMG_20230201_223631.jpg"
+	"./IMG_20220326_170758.jpg",
+	"./IMG_20220412_114227.jpg",
+	"./IMG_20220506_175902.jpg",
+	"./IMG_20220528_134100.jpg",
+	"./IMG_20220717_132134.jpg",
+	"./IMG_20230318_233758.jpg",
+	"./IMG_20230320_154208.jpg",
+	"./original_c526cbc3-274e-4468-92f5-bb1ae2f925bb_IMG_20210718_195703~2.jpg",
+	"./original_6ecd1616-0e85-42e6-be19-a27f18268673_IMG_20220716_173404.jpg",
+	"./IMG_20230201_223631.jpg"
 ];
 
 const zipped_title_words = zip(words, imgs)
