--- a/src/components/Location.astro
+++ b/src/components/Location.astro
@@ -13,7 +13,7 @@ const { } = Astro.props;
         We've been to so many exciting places already
     </h2>
 
-       <img src="/where-weve-been.png" />
+       <img src="./where-weve-been.png" />
 	</a>
 </li>
 <style>
