--- a/src/components/Counter.astro
+++ b/src/components/Counter.astro
@@ -10,7 +10,7 @@ const { } = Astro.props;
 	<a>
 		<h2>My bonnie bonnie lassie</h2>
 		<p class="counter-time"/>
-		<p>and every one of those milliseconds, I grow to love you more</p>
+		<p>and every one of those milliseconds, my love for you grows even stronger</p>
 	</a>
 </li>
 <script>
